--- a/src/main/resources/org/apache/jsieve/testsmap.properties
+++ b/src/main/resources/org/apache/jsieve/testsmap.properties
@@ -13,4 +13,4 @@ true=org.apache.jsieve.tests.True
 envelope=org.apache.jsieve.tests.optional.Envelope
 
 # Replacement for built in test
-body=com.nmote.mcf.tests.Body
+body=com.nmote.mcf.sieve.tests.Body
