Added fileIntoAlias setting for DefaultDeliveryAgent

--- a/src/main/resources/com/nmote/mcf/mcf-default.properties
+++ b/src/main/resources/com/nmote/mcf/mcf-default.properties
@@ -1,10 +1,10 @@
-	
+
 # Directory for queueing messages.
 queueDir = queue
-	
+
 # Sieve file
 sieve = sieve.siv
-	
+
 # Interface and port to listen on
 listen = *:8025
 
@@ -12,14 +12,14 @@ listen = *:8025
 # accept once we reach this limit, the server will gracefully reject new
 # connections. Default is 1000.
 maxConnections = 1000
-	
+
 # The timeout for waiting for data on a connection is one minute (ms)
 connectionTimeout = 60000
-	
+
 # The maximal number of recipients that this server accepts per message
 # delivery request.
 maxRecipients = 1000
-	
+
 # The maximum size of a message that the server will accept. This value is
 # advertised during the EHLO phase if it is larger than 0. If the message
 # size specified by the client during the MAIL phase, the message will be
@@ -41,10 +41,16 @@ maxHeaderCount = 1000
 maxHeaderLen = 10000
 
 # Default 'keep' route
-# If message is either explicitly or implicitly kept by sieve this is a 
-# destination message gets passed to. You can specify multiple
-# destinations separated by space 
+# If message is either explicitly or implicitly kept by sieve this is
+# the destination where message gets passed to. You can specify multiple
+# destinations separated by space
 keep = mbox:keep
+
+# FileInto aliases symbols to delivery protocols. Can be used to
+# keep explicit IP addresses and file paths out of sieve file.
+# Alias format is alias=delivery, i.e. passthrough=>smtp:remote-host
+# Multiple aliases can be defined separated by space
+fileIntoAlias =
 
 # Maximum content length, default is unlimited (-1)
 maxContentLen = -1
@@ -78,12 +84,12 @@ redeliveryInterval = 0
 shutdownTimeout = 300000
 
 # SMTP codes that will reject message and pass it to origin server
-smtpRejectCodes = 
+smtpRejectCodes =
 
 # Where should we save rejected messages (trash means quietly delete)
 smtpRejectTo = trash
 
-# File where usage counters are saved into. 
+# File where usage counters are saved into.
 countersFile = /tmp/mcf-counters.txt
 
 # Counter update interval (s). Set to 0 to disable counters.
