Allow configuration of clamav and spamassassin addresses.

--- a/src/main/resources/com/nmote/mcf/mcf-default.properties
+++ b/src/main/resources/com/nmote/mcf/mcf-default.properties
@@ -59,7 +59,7 @@ maxContentLen = -1
 clientBufferSize = 4096
 
 # Publicly advertised software name and version
-softwareName = MCF 1.0.2
+softwareName = MCF 0.8.0
 
 # SMTP server host name
 #serverHostName = localhost
@@ -95,3 +95,8 @@ countersFile = /tmp/mcf-counters.txt
 # Counter update interval (s). Set to 0 to disable counters.
 countersInterval = 20
 
+# ClamAV server location
+clamAV = localhost:3310
+
+# SpamAssasin server location
+spamassasin = localhost:783
