--- a/src/main/resources/com/nmote/mcf/mcf-default.properties
+++ b/src/main/resources/com/nmote/mcf/mcf-default.properties
@@ -98,5 +98,5 @@ countersInterval = 20
 # ClamAV server location
 clamAV = localhost:3310
 
-# SpamAssasin server location
-spamassasin = localhost:783
+# SpamAssassin server location
+spamassassin = localhost:783
