--- a/src/main/resources/com/nmote/mcf/mcf-default.properties
+++ b/src/main/resources/com/nmote/mcf/mcf-default.properties
@@ -100,3 +100,6 @@ clamAV = localhost:3310
 
 # SpamAssassin server location
 spamassassin = localhost:783
+
+# Keep original headers for delivery
+originalHeaders = true
