--- a/pom.xml
+++ b/pom.xml
@@ -3,24 +3,24 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.nmote</groupId>
 	<artifactId>nmote-mcf</artifactId>
-	<version>0.8.0</version>
+	<version>0.9.0</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<commons-beanutils.version>1.8.3</commons-beanutils.version>
 		<commons-codec.version>1.6</commons-codec.version>
 		<commons-daemon.version>1.0.15</commons-daemon.version>
-		<commons-io.version>2.4</commons-io.version>
-		<commons-lang.version>3.3.2</commons-lang.version>
+		<commons-io.version>2.5</commons-io.version>
+		<commons-lang.version>3.5</commons-lang.version>
 		<commons-pool.version>2.2</commons-pool.version>
-		<nmote-xr.version>2.1.0</nmote-xr.version>
+		<nmote-xr.version>2.2.0</nmote-xr.version>
 		<ehcache.version>2.5.0</ehcache.version>
-		<guice.version>4.0-beta5</guice.version>
-		<jackson.version>2.5.0</jackson.version>
+		<guice.version>4.1.0</guice.version>
+		<jackson.version>2.8.8</jackson.version>
 		<junit.version>4.12</junit.version>
 		<jsieve.version>0.5-PATCHED</jsieve.version>
-		<logback.version>1.1.2</logback.version>
-		<lucene.version>4.10.3</lucene.version>
-		<mime4j.version>0.7.2</mime4j.version>
+		<logback.version>1.2.3</logback.version>
+		<lucene.version>6.5.0</lucene.version>
+		<mime4j.version>0.8.0</mime4j.version>
 		<slf4j.version>1.7.10</slf4j.version>
 		<subethamail.version>3.1.7-PATCHED</subethamail.version>
 	</properties>
