Optima delivery WIP

--- a/src/main/resources/com/nmote/mcf/mcf-default.properties
+++ b/src/main/resources/com/nmote/mcf/mcf-default.properties
@@ -73,6 +73,9 @@ spamPrefix = [SPAM]
 # Auto create maildir folder
 maildirAutoCreate = true
 
+# Update or create maildirsize
+maildirSize = true
+
 # Append message id to mbox From_ line as moreinfo
 appendIdToFromLine = true
 
@@ -103,3 +106,7 @@ spamassassin = localhost:783
 
 # Keep original headers for delivery
 originalHeaders = true
+
+# Maildir and mailbox path replacements
+# Use /path/old=>/path/new format, multiple replacements separated by space
+pathRename = none=>none
