Optima delivery WIP

--- a/src/main/resources/com/nmote/mcf/mcf-default.properties
+++ b/src/main/resources/com/nmote/mcf/mcf-default.properties
@@ -92,6 +92,10 @@ smtpRejectCodes =
 # Where should we save rejected messages (trash means quietly delete)
 smtpRejectTo = trash
 
+# Static SMTP remote delivery routes. No need for MX records (trash means quietly delete)
+# Use domain=>smtp:server-address:port
+smtpRoutes = *=>trash
+
 # File where usage counters are saved into.
 countersFile = /tmp/mcf-counters.txt
 
@@ -109,4 +113,4 @@ originalHeaders = true
 
 # Maildir and mailbox path replacements
 # Use /path/old=>/path/new format, multiple replacements separated by space
-pathRename = none=>none
+pathRename = none=>none 
