Custom maildir filename format

--- a/src/main/resources/com/nmote/mcf/mcf-default.properties
+++ b/src/main/resources/com/nmote/mcf/mcf-default.properties
@@ -114,3 +114,12 @@ originalHeaders = true
 # Maildir and mailbox path replacements
 # Use /path/old=>/path/new format, multiple replacements separated by space
 pathRename = none=>none 
+
+# Maildir file name format
+# 1. epoch now in ms
+# 2. epoch now in s
+# 3. hostname
+# 4. sequence number
+# 5. message id
+# 6. random number between 0 - 0xFFF
+fileNameFormat = %2$d.%5$s.%3$s.%4$s%6$03X
